tests/negative/resource_named_struct_param_leak.ora
resource TokenUnit = u256;

struct Holder {
    place: Resource<TokenUnit>;
}

contract ResourceNamedStructParamLeak {
    pub fn expose(holder: Holder) {}
}
